@@ -1,3 +1,11 @@
+2018-01-15  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/83830
+	* include/std/type_traits (has_unique_object_representations_v): Add
+	variable template.
+	* testsuite/20_util/has_unique_object_representations/value.cc: Check
+	variable template.
+
 2018-01-15  Ville Voutilainen  <ville.voutilainen@gmail.com>
 
 	Make optional conditionally
